force-app/main/default/objects/Post_Office__c/Post_Office__c.object-meta.xml
<CustomObject>
    <label>Post Office</label>
    <nameField>
        <label>Post Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>