force-app/main/default/objects/Post_Office__c/fields/Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type__c</fullName>
    <label>Branch Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>