force-app/main/default/objects/Post_Office__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <label>Circle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>