force-app/main/default/objects/Post_Office__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>